pic visibility III

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
 }
 
 .img-banner {
-    background-image: url('/images/beach1.jpg');
+    background-image: url('t1-website-ux/images/beach1.jpg');
     background-color: #a3e4d7;
     background-position: center center;
     background-repeat: no-repeat;
