--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ body {
     min-height: 100vh;
 }
 
+a {
+    text-decoration: none;
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
